NIFI-12982 Extend test suite of MockProcessSession